aks/4-ingress/01-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-app
  namespace: aulainfra
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - host: springapp.cloudapp.com
     http:
      paths:
      - backend:
          serviceName: app
          servicePort: 80
